CHANGES
*******

0.9 (unreleased)
================

- Add support for Python 3.7, 3.8 and 3.9.


0.8.2 (2020-08-20)
==================

- Adding missing ICO, GIF and JPG files.

0.8.1 (2020-08-20)
==================

- Correcting brown-bag release with MANIFEST.

0.8 (2020-08-20)
================

- Python3.6+ compatibility.

0.7 (2012-05-02)
================

- Make sure to pick up latest grok and grokcore.layout.

0.6 (2011-07-14)
================

- Use grokcore.layout and import from grok.

0.5.1 (2011-03-01)
==================

- Make sure grokcore.view is properly configured.

0.5 (2011-01-12)
================

- Use `fanstatic` instead of zope DirectoryResource.

0.4.2 (2010-12-16)
==================

- Update tests to properly with the latests martian releases.

0.4.1 (2010-11-03)
==================

- Test dependency for zope.login.

0.4 (2010-10-25)
================

- Set the default view name for IRootFolder to 'index' and register the
  the redirecting view for this name as well.

0.3 (2010-10-18)
================

* Removed dependency on zope.app.testing.

0.2.1 (2010-05-19)
==================

* Package modified to comply with repository policy (license, etc.).

* Use own template dir for layout module in order not to provoke
  (erraneous) warnings of template registry.

0.2 (2010-03-06)
================

* A minor CSS glitch has been corrected.

* The messaging system is now registered via
  ``grokcore.message``. ``grokui.base`` is no longer bound to
  ``z3c.flashmessage``.

* Dependencies have been cleaned up : ``grokui.base`` no longer
  depends on ``zope.app.zcmlfiles`` and can now be used outside the
  ``Grok`` suite. It uses only the `grokcore` packages.


0.1 (2010-02-23)
================

Initial implementation.