@@ -35,21 +35,18 @@ setup(name='grokui.base',
           '\n\n' +
           read('CHANGES.txt')
       ),
-      # Get strings from http://www.python.org/pypi?%3Aaction=list_classifiers
       classifiers=[
           'Development Status :: 3 - Alpha',
           'Environment :: Web Environment',
           'Intended Audience :: Developers',
           'License :: OSI Approved :: Zope Public License',
           'Programming Language :: Python',
-          'Programming Language :: Python :: 2',
-          'Programming Language :: Python :: 2.7',
           'Programming Language :: Python :: 3',
-          'Programming Language :: Python :: 3.5',
           'Programming Language :: Python :: 3.6',
           'Programming Language :: Python :: 3.7',
           'Programming Language :: Python :: 3.8',
           'Programming Language :: Python :: 3.9',
+          'Programming Language :: Python :: 3.10',
           'Programming Language :: Python :: Implementation :: CPython',
           'Natural Language :: English',
           'Operating System :: OS Independent',
@@ -58,13 +55,14 @@ setup(name='grokui.base',
       keywords="zope3 grok grokadmin",
       author="Zope Foundation and Contributors",
       author_email="grok-dev@zope.org",
-      url="http://svn.zope.org/grokui.base",
+      url="https://github.com/zopefoundation/grokui.base",
       license="ZPL 2.1",
       package_dir={'': 'src'},
       packages=find_packages('src'),
       include_package_data=True,
       zip_safe=False,
       namespace_packages=['grokui'],
+      python_requires='>=3.6, <4',
       install_requires=[
           'fanstatic',
           'grok >= 1.10',
