@@ -4,7 +4,9 @@ CHANGES
 0.9 (unreleased)
 ================
 
-- Add support for Python 3.7, 3.8 and 3.9.
+- Add support for Python 3.7, 3.8, 3.9, and 3.10.
+
+- Drop support for Python 2.7 and 3.5.
 
 
 0.8.2 (2020-08-20)
